<resources>
    <string name="app_name">BarberShop</string>
    <string name="your_login">Ваш логин</string>
    <string name="your_password">Ваш пароль</string>
    <string name="registration">Регистрация</string>
    <string name="enter_into_system">Войти в систему</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="thu">Thu</string>
    <string name="wed">Wed</string>
    <string name="fri">Fri</string>
    <string name="sut">Sut</string>
    <string name="sun">Sun</string>
    <string name="add_entry_to_hairdresser">Add entry to hairdresser</string>
    <string name="delete_hairdresser">Delete Hairdresser</string>
    <string name="account">account</string>
    <string name="admin_menu">Admin menu</string>
    <string name="add_the_hairdresser">Add the hairdresser</string>
    <string name="user_s_list">User\'s list</string>
    <string name="service_list">Service list</string>
    <string name="statistics">statistics</string>
    <string name="save_changes">save changes</string>
    <string name="photo_url">Photo_url</string>
    <string name="lastname">Lastname</string>
    <string name="firstname">Firstname</string>
    <string name="client_gender">Client gender</string>
    <string name="password">Password</string>
    <string name="save_hairdresser">Save hairdresser</string>
    <string name="add_to_admin_s_list">Add to admin\'s list</string>
    <string name="delete_from_admin_s">Delete from admin\'s</string>
    <string name="entries_of_user">Entries of user</string>
    <string name="name">NAME</string>
    <string name="price">PRICE</string>
    <string name="delete">delete</string>
    <string name="add">Add</string>
    <string name="number_of_orders_this_month">Number of orders this month</string>
    <string name="amount_earned_for_the_month">Amount earned for the month</string>
    <string name="pick_the_date">Pick the date</string>
    <string name="pick_the_service">Pick the service</string>
    <string name="save_entry">Save entry</string>
    <string name="pick_the_time">Pick the time</string>
    <string name="no_work">day off</string>
    <string name="log_out">log out</string>
</resources>
