<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_the_date"
        android:gravity="center"
        android:textSize="25sp"/>

    <DatePicker
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_gravity="center_horizontal"
        android:calendarViewShown="false"
        android:id="@+id/fragment_entry_picker_date"></DatePicker>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_the_time"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_marginTop="15dp" />

    <TimePicker
        android:id="@+id/fragment_entry_picker_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        android:layout_gravity="center_horizontal"></TimePicker>

    <TextView
        android:layout_marginTop="15dp"
        android:textSize="24sp"
        android:text="@string/pick_the_service"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Spinner
        android:id="@+id/fragment_entry_picker_spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp">

    </Spinner>

    <Button
        android:id="@+id/fragment_entry_picker_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_entry"/>

</LinearLayout>
</ScrollView>