<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/fragment_validation_password_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:ems="15"
        android:hint="@string/your_password"
        android:textAlignment="center"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/fragment_validation_login_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:hint="@string/your_login"
        android:textAlignment="center"
        android:layout_above="@id/fragment_validation_password_edit_text"/>

    <Button
        android:id="@+id/fragment_validation_enter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_into_system"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/fragment_validation_password_edit_text"/>

    <Button
        android:id="@+id/fragment_validation_registration_button"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/fragment_validation_enter_button"/>

    <ProgressBar
        android:id="@+id/fragment_validation_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_validation_registration_button"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

</RelativeLayout>