<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<RelativeLayout
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/fragment_hairdresser_profile_image"
        android:layout_width="150dp"
        android:layout_height="200dp" />


    <EditText
        android:id="@+id/fragment_hairdresser_profile_last_name"
        tools:text="Фамилия"
        android:descendantFocusability="beforeDescendants"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/fragment_hairdresser_profile_image"/>
    <EditText
        android:id="@+id/fragment_hairdresser_profile_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/fragment_hairdresser_profile_image"
        tools:text="Имя"
        android:descendantFocusability="beforeDescendants"
        android:textSize="25sp"
        android:layout_below="@id/fragment_hairdresser_profile_last_name"
        />

    <ImageView
        android:id="@+id/fragment_hairdresser_profile_man_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_hairdresser_profile_first_name"
        android:layout_toEndOf="@id/fragment_hairdresser_profile_image"
        android:src="@drawable/ic_man_black"
        android:visibility="gone"/>
    <ImageView
        android:id="@+id/fragment_hairdresser_profile_woman_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_hairdresser_profile_first_name"
        android:layout_toEndOf="@id/fragment_hairdresser_profile_man_icon"
        android:src="@drawable/ic_woman_black"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/fragment_hairdresser_profile_linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_hairdresser_profile_image"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/mon"
            android:textAlignment="center"
            android:textSize="20sp"
            android:background="@color/yellow"
            android:layout_weight="1"
            android:layout_margin="2dp" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/tue"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="@color/yellow"
            android:textAlignment="center"
            android:layout_margin="2dp"/>


        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/wed"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="@color/yellow"
            android:textAlignment="center"
            android:layout_margin="2dp"/>


        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/thu"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="@color/yellow"
            android:textAlignment="center"
            android:layout_margin="2dp"/>


        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/fri"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="@color/yellow"
            android:textAlignment="center"
            android:layout_margin="2dp"/>


        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/sut"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="@color/yellow"
            android:textAlignment="center"
            android:layout_margin="2dp"/>


        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/sun"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="@color/yellow"
            android:textAlignment="center"
            android:layout_margin="2dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_hairdresser_profile_linear_layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_hairdresser_profile_linear_layout_1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/fragment_hairdresser_profile_mon"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="15sp"
            android:background="@color/lightGray"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:layout_margin="2dp"
            tools:text="09:00 \n 19:00"/>

        <EditText
            android:id="@+id/fragment_hairdresser_profile_tue"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="15sp"
            android:descendantFocusability="beforeDescendants"
            android:background="@color/lightGray"
            android:layout_weight="1"
            android:layout_margin="2dp"
            tools:text="09:00 19:00"/>

        <EditText
            android:id="@+id/fragment_hairdresser_profile_wed"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:descendantFocusability="beforeDescendants"
            android:textSize="15sp"
            android:background="@color/lightGray"
            android:layout_weight="1"
            android:layout_margin="2dp"
            tools:text="09:00 - 19:00"/>

        <EditText
            android:id="@+id/fragment_hairdresser_profile_thu"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="15sp"
            android:background="@color/lightGray"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:layout_margin="2dp"
            tools:text="09:00 - 19:00"/>

        <EditText
            android:id="@+id/fragment_hairdresser_profile_fri"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="15sp"
            android:background="@color/lightGray"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:layout_margin="2dp"
            tools:text="09:00 - 19:00"/>

        <EditText
            android:id="@+id/fragment_hairdresser_profile_sat"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="15sp"
            android:background="@color/lightGray"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:layout_margin="2dp"
            tools:text="09:00 - 19:00"/>
        <EditText
            android:id="@+id/fragment_hairdresser_profile_sun"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="15sp"
            android:descendantFocusability="beforeDescendants"
            android:background="@color/lightGray"
            android:layout_weight="1"
            android:layout_margin="2dp"
            tools:text="09:00 - 19:00"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_hairdresser_profile_entries"
        android:layout_below="@id/fragment_hairdresser_profile_linear_layout_2"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/fragment_hairdresser_profile_add_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_entry_to_hairdresser"
        android:layout_below="@id/fragment_hairdresser_profile_entries"/>

    <Button
        android:id="@+id/fragment_hairdresser_profile_delete_hairdresser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_hairdresser_profile_add_entry"
        android:text="@string/delete_hairdresser"/>

    <Button
        android:id="@+id/fragment_hairdresser_profile_save_hairdresser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_hairdresser_profile_delete_hairdresser"
        android:text="@string/save_changes"
        android:layout_marginTop="5dp"/>


    <ProgressBar
        android:id="@+id/fragment_hairdresser_profile_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>

</ScrollView>